--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "author": "Benjamin Spriggs",
   "engines": {
 	"node": "10.x.x",
-	"npm": "0.33.x"
+	"npm": "6.x.x"
   },
   "dependencies": {
     "ampersand-app": "^1.0.0",
