--- a/package.json
+++ b/package.json
@@ -2,10 +2,6 @@
   "name": "iron",
   "version": "0.0.1",
   "author": "Benjamin Spriggs",
-  "engines": {
-	"node": "10.x.x",
-	"npm": "6.x.x"
-  },
   "dependencies": {
     "ampersand-app": "^1.0.0",
     "ampersand-dom": "^1.2.1",
@@ -18,16 +14,23 @@
     "ampersand-view-switcher": "^2.0.0",
     "andlog": "^1.0.0",
     "async": "^0.9.0",
+    "body-parser": "^1.4.3",
     "clientconfig": "^1.0.0",
+    "compression": "^1.0.8",
+    "cookie-parser": "^1.3.2",
     "domify": "^1.3.0",
     "domready": "^1.0.5",
+    "express": "^4.6.1",
     "favicon-setter": "^0.1.1",
     "getconfig": "^2.1.0",
-    "hapi": "^8.0.0",
+    "helmet": "^0.7.1",
+    "jade": "^1.3.1",
     "local-links": "^1.2.0",
     "lodash": "^3.6.0",
-    "moonboots_hapi": "^4.0.0",
-    "stylizer": "^2.2.0",
+    "moonboots-express": "^3.0.0",
+    "semi-static": "^0.0.5",
+    "serve-static": "^1.3.2",
+    "stylizer": "^2.1.0",
     "templatizer": "^1.0.0"
   },
   "devDependencies": {},
@@ -43,10 +46,5 @@
     "undef": true,
     "white": true
   },
-  "main": "server.js",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:benjspriggs/iron.git"
-  }
+  "main": "server.js"
 }
