--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "iron",
   "version": "0.0.1",
   "author": "Benjamin Spriggs",
-  "engine": {
+  "engines": {
 	  "node": "10.x.x",
 	  "npm": "6.1.0"
   },
