Feat/create react app (#7)
* Remove ampersand-cli

* create-react-app

* Re-add app.json for heroku deployment

* Minimal working version using create-react-app and current versions of redux-thunk, etc

* Remove import to unused composer

--- a/app.json
+++ b/app.json
@@ -1,11 +1,11 @@
 {
-	"name": "iron",
-	"description": "A dead simple plaintext blog CMS",
-	"repository": "https://github.com/benjspriggs/iron",
-	"keywords": ["node", "ampersand", "cms", "blog", "git"],
-	"buildpacks": [
-		{
-			"url": "heroku/nodejs"
-		}
-	]
+  "name": "iron",
+  "description": "A dead simple plaintext blog CMS",
+  "repository": "https://github.com/benjspriggs/iron",
+  "keywords": ["node", "cms", "blog", "git"],
+  "buildpacks": [
+    {
+      "url": "heroku/nodejs"
+    }
+  ]
 }
