--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
 		"react-redux": "^5.0.7",
 		"react-scripts": "1.1.4",
 		"redux": "^4.0.0",
-		"redux-thunk": "^2.3.0"
+		"redux-observable": "^1.0.0",
+		"redux-thunk": "^2.3.0",
+		"rxjs": "^6.2.1"
 	},
 	"scripts": {
 		"start": "react-scripts start",
