--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"npm": "6.1.0"
 	},
 	"dependencies": {
+		"@octokit/rest": "^15.9.4",
 		"connected-react-router": "^4.3.0",
 		"history": "^4.7.2",
 		"react": "^16.4.1",
@@ -14,6 +15,7 @@
 		"react-redux": "^5.0.7",
 		"react-scripts": "1.1.4",
 		"redux": "^4.0.0",
+		"redux-actions": "^2.4.0",
 		"redux-observable": "^1.0.0",
 		"redux-thunk": "^2.3.0",
 		"rxjs": "^6.2.1"
