--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
 		"redux-actions": "^2.4.0",
 		"redux-observable": "^1.0.0",
 		"redux-thunk": "^2.3.0",
-		"rxjs": "^6.2.1"
+		"rxjs": "^6.2.1",
+		"semantic-ui-css": "^2.3.2",
+		"semantic-ui-react": "^0.81.3"
 	},
 	"scripts": {
 		"start": "react-scripts start",
