--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"dependencies": {
 		"@octokit/rest": "^15.9.4",
 		"connected-react-router": "^4.3.0",
+		"formik": "^0.11.11",
 		"history": "^4.7.2",
 		"prop-types": "^15.6.2",
 		"react": "^16.4.1",
@@ -22,7 +23,8 @@
 		"redux-thunk": "^2.3.0",
 		"rxjs": "^6.2.1",
 		"semantic-ui-css": "^2.3.2",
-		"semantic-ui-react": "^0.81.3"
+		"semantic-ui-react": "^0.81.3",
+		"yup": "^0.25.1"
 	},
 	"scripts": {
 		"start": "react-scripts start",
