--- a/package.json
+++ b/package.json
@@ -56,6 +56,9 @@
 		"redux-devtools-extension": "^2.13.5"
 	},
 	"lint-staged": {
-		"*.js": ["eslint --fix", "git add"]
+		"*.js": [
+			"eslint --fix",
+			"git add"
+		]
 	}
 }
