--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"connected-react-router": "^4.3.0",
 		"formik": "^0.11.11",
 		"history": "^4.7.2",
+		"marked": "^0.4.0",
 		"prop-types": "^15.6.2",
 		"react": "^16.4.1",
 		"react-dom": "^16.4.1",
