--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"redux-actions": "^2.4.0",
 		"redux-observable": "^1.0.0",
 		"redux-persist": "^5.10.0",
+		"redux-reset": "^0.3.0",
 		"redux-thunk": "^2.3.0",
 		"rxjs": "^6.2.1",
 		"semantic-ui-css": "^2.3.2",
