--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
 		"husky": "^0.14.3",
 		"lint-staged": "^7.2.0",
 		"lorem-ipsum": "^1.0.5",
+		"react-generate-props": "^0.3.0",
 		"redux-devtools-extension": "^2.13.5"
 	},
 	"lint-staged": {
