Implement multiple features (#23)
* Make moves to use rxjs

* Add start to blog post and epics for getting content from GH repos

* Add octokit, rxjs dependencies

* Add epics

* Add semantic ui, first version of basic repository viewing

* Recursively get trees instead

* Use list icon and link to url

* Add prop types and basic blog post

* Add basic flow, TODOs for posts

* Attach a segment

* Remove failing test

* Fix indentation

* Use container instead of div

* Update spacing and ordering

* Add formik for forms and yup for validation

* More cosmetic adjustments

* Add basic GH form

* Add magic formik stuff

* Remove unused imports

* Ajax some conten

* Make error display more intelligent

* Use proper requirement marking from prop-types

* Wire form up to dispatch

* Add interim state monitor

* Fix typo

* npm i

* Update code to meet linting requirements

* Use proper exporting

* Make id non-required

* Add option for generic errors

* Add githubErrors to proptypes

* Use key

* Add more stuff in settings page

* Add base-64 encoding and get actual content from GitHub

* Add comment

* Add marked lexer as dependency

* Use blog posts sourced from github

* Add react-render-html to render marked HTML

* Get source, conditionally render date

* Parse text files

* Use redux-reset, update RefreshState with new button

* Use md5 to key different posts by content

* Use id instead of key as prop

* Add divider to stateful buttons

* Add single post viewing feature

* Add page for viewing and use PostsPage as a default

* Add simpler form, use NoMatch instead of PostsPage

* Redo import order

* Add some validation

* Add clear error action

* Add button to clear errors

* Add divider and remove menu item

* Use jest and enzyme for testing, setup react 16 adapter

* Add simple NoMatch test

* Use react app eslint config

More info here:
<https://gi

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
-  "extends": [
-    "standard",
-    "plugin:react/recommended"
-  ]
+  "extends": "react-app",
+  "plugins": ["prettier"],
+  "rules": {
+    "prettier/prettier": "error"
+  }
 }
