--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "npm": "6.1.0"
   },
   "dependencies": {
+    "@axetroy/react-download": "^1.1.1",
     "@octokit/rest": "^15.9.4",
     "base-64": "^0.1.0",
     "connected-react-router": "^4.3.0",
