--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-lazy-load": "^3.0.13",
     "react-redux": "^5.0.7",
     "react-render-html": "^0.6.0",
     "react-router-dom": "^4.3.1",
