Perform CRUD operations on posts (#33)
* v0.1rc1 (#32)

* Remove ampersand credit

* Update README to meet project requirements (#21)

Closes #5. Closes #15.

* Add contribution guidelines (#24)

* Create CONTRIBUTING.md

* Create pull_request_template.md

* Precommit and prepush code quality hooks (#26)

* Add husky and pre-commit and pre-push hooks

* Add eslint and config, targets for prepush to verify code quality

* Add react eslint configuration, lint staged files

Closes #22.

* Feat/persist (#25)

* Add redux-persist

* Spacing, use redux-persist and persistor

* Remove unused reducer from connect-react-router

* Add button to clear state

* Catch errors

* Log instead of alert

* Fix package spacing

Closes #12.

* Implement multiple features (#23)

* Make moves to use rxjs

* Add start to blog post and epics for getting content from GH repos

* Add octokit, rxjs dependencies

* Add epics

* Add semantic ui, first version of basic repository viewing

* Recursively get trees instead

* Use list icon and link to url

* Add prop types and basic blog post

* Add basic flow, TODOs for posts

* Attach a segment

* Remove failing test

* Fix indentation

* Use container instead of div

* Update spacing and ordering

* Add formik for forms and yup for validation

* More cosmetic adjustments

* Add basic GH form

* Add magic formik stuff

* Remove unused imports

* Ajax some conten

* Make error display more intelligent

* Use proper requirement marking from prop-types

* Wire form up to dispatch

* Add interim state monitor

* Fix typo

* npm i

* Update code to meet linting requirements

* Use proper exporting

* Make id non-required

* Add option for generic errors

* Add githubErrors to proptypes

* Use key

* Add more stuff in settings page

* Add base-64 encoding and get actual content from GitHub

* Add comment

* Add marked lexer as dependency


--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "redux-persist": "^5.10.0",
     "redux-reset": "^0.3.0",
     "redux-thunk": "^2.3.0",
+    "rich-markdown-editor": "^2.0.11",
     "rxjs": "^6.2.1",
+    "semantic-ui-calendar-react": "^0.7.1",
     "semantic-ui-css": "^2.3.2",
     "semantic-ui-react": "^0.81.3",
     "yup": "^0.25.1"
