--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "base-64": "^0.1.0",
     "concurrently": "^3.6.1",
     "connected-react-router": "^4.3.0",
+    "cors": "^2.8.4",
     "enzyme-adapter-react-16": "^1.1.1",
     "express": "^4.16.3",
     "formik": "^0.11.11",
