Add license-check, target for prepush

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iron",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "engines": {
     "node": "10.x.x",
@@ -45,7 +45,8 @@
     "eject": "react-scripts eject",
     "test:ci": "CI=true npm test",
     "precommit": "pretty-quick --staged",
-    "prepush": "pretty-quick"
+    "prepush": "pretty-quick && npm run licensecheck",
+    "licensecheck": "license-check"
   },
   "license": "MIT",
   "repository": {
@@ -56,10 +57,21 @@
     "enzyme": "^3.3.0",
     "eslint-plugin-prettier": "^2.6.2",
     "husky": "^0.14.3",
+    "license-check": "^1.1.5",
     "lorem-ipsum": "^1.0.5",
     "prettier": "^1.13.7",
     "pretty-quick": "^1.6.0",
     "react-generate-props": "^0.3.0",
     "redux-devtools-extension": "^2.13.5"
+  },
+  "license-check-config": {
+    "src": [
+      "src/**/*.js",
+      "!./node_modules/**/*"
+    ],
+    "path": "LICENSE.js",
+    "blocking": false,
+    "logInfo": false,
+    "logError": true
   }
 }
