--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "dependencies": {
     "@axetroy/react-download": "^1.1.1",
     "@octokit/rest": "^15.9.4",
+    "async-parallel": "^1.2.3",
     "base-64": "^0.1.0",
     "concurrently": "^3.6.1",
     "connected-react-router": "^4.3.0",
     "cors": "^2.8.4",
+    "dotenv": "^6.0.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "express": "^4.16.3",
     "formik": "^0.11.11",
@@ -25,6 +27,7 @@
     "pg-connection-string": "^2.0.0",
     "pg-promise": "^8.4.5",
     "prop-types": "^15.6.2",
+    "query-string": "^6.1.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-lazy-load": "^3.0.13",
