--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "pg-connection-string": "^2.0.0",
     "pg-promise": "^8.4.5",
     "prop-types": "^15.6.2",
-    "query-string": "^6.1.0",
+    "query-string-es5": "^6.1.4",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-lazy-load": "^3.0.13",
