--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
   "keywords": ["node", "cms", "blog", "git"],
   "buildpacks": [
     {
-      "url": "heroku/nodejs"
+      "url": "https://github.com/mars/create-react-app-buildpack.git"
     }
   ]
 }
