--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "md5": "^2.2.1",
     "nodemon": "^1.18.3",
     "prop-types": "^15.6.2",
-    "query-string-es5": "^6.1.4",
+    "query-string": "^6.1.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-lazy-load": "^3.0.13",
