Fix `npm build` on heroku. Adds dependency on `iron-backend`
commit aa9a11b2a9917f715c2e0fecbd4f66b6677307d0
Author: bspriggs <ben@sprico.com>
Date:   Wed Aug 15 15:02:35 2018 -0700

    Fix configuration actions and update the API form

commit 986c68b218db3a99bc162a366de094ab6112b361
Author: bspriggs <ben@sprico.com>
Date:   Wed Aug 15 15:01:52 2018 -0700

    Use ES6 query-string

commit b7a9bc305e5538fc4be16e98af291cc4d444757e
Author: bspriggs <ben@sprico.com>
Date:   Wed Aug 15 12:49:47 2018 -0700

    Extract out backend

commit 9c8efdf21d007daca7925309072dbdb6538aafc8
Author: bspriggs <ben@sprico.com>
Date:   Wed Aug 15 12:36:50 2018 -0700

    Grab base URL from config

commit 99f15a37fb3f24b3ec41266300f2502f814345e7
Author: bspriggs <ben@sprico.com>
Date:   Wed Aug 15 12:35:02 2018 -0700

    Remove server-related scripts

commit 2088ca04ae6b092e91b25705f5d0159acfc0204d
Author: bspriggs <ben@sprico.com>
Date:   Wed Aug 15 12:07:29 2018 -0700

    Remove pg

commit 054b6eba1e5e19a57e5a9874455b66a72c8cd480
Author: bspriggs <ben@sprico.com>
Date:   Wed Aug 15 11:51:45 2018 -0700

    Update API_BASE_URL in .env and set as middleware for backend

commit d180e19c2d840f007b44529a176f793442c17683
Author: bspriggs <ben@sprico.com>
Date:   Wed Aug 15 11:13:07 2018 -0700

    Change Procfile according to implicit web command from CRA buildpack

commit e5ea392810756a186d0b40cb88044cdb93237f5c
Author: bspriggs <ben@sprico.com>
Date:   Wed Aug 15 10:59:31 2018 -0700

    Change serve command

commit ec3459ece60e05dbdbc66ff823c3523e4d268db4
Author: bspriggs <ben@sprico.com>
Date:   Wed Aug 15 10:59:17 2018 -0700

    Use CRA buildpack

commit f3f2cf526fbc6159e5f63556ba664cb7df84948a
Author: bspriggs <ben@sprico.com>
Date:   Wed Aug 15 10:53:38 2018 -0700

    Use serve again

commit 5641650753e981a1a98f4f329f4cccb50994c0c8
Author: bspriggs <ben@sprico.com>
Date:   Wed Aug 15 10:39:52 2018 -0700

    Update Procfile to use npm start

commit 1cbfe601896992d0a065e5af01a37af8

--- a/package.json
+++ b/package.json
@@ -23,11 +23,8 @@
     "marked": "^0.4.0",
     "md5": "^2.2.1",
     "nodemon": "^1.18.3",
-    "pg": "^7.4.3",
-    "pg-connection-string": "^2.0.0",
-    "pg-promise": "^8.4.5",
     "prop-types": "^15.6.2",
-    "query-string-es5": "^6.1.4",
+    "query-string": "^6.1.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-lazy-load": "^3.0.13",
@@ -51,15 +48,14 @@
     "yup": "^0.25.1"
   },
   "scripts": {
-    "start": "concurrently 'npm run start:ui' 'npm run start:server'",
-    "start:ui": "react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "test:ci": "CI=true npm test",
     "precommit": "pretty-quick --staged",
     "prepush": "pretty-quick",
-    "start:server": "nodemon src/server/index.js"
+    "serve": "serve -s build"
   },
   "license": "MIT",
   "repository": {
