--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "semantic-ui-calendar-react": "^0.7.1",
     "semantic-ui-css": "^2.3.2",
     "semantic-ui-react": "^0.81.3",
+    "slate-dev-environment": "^0.1.4",
     "yup": "^0.25.1"
   },
   "scripts": {
