--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "iron",
   "version": "0.3.0",
-  "private": true,
+  "private": false,
   "engines": {
     "node": "10.x.x",
     "npm": "6.x.x"
